<resources>
    <string name="app_name">D\'loker</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="notelp">No. Telp</string>
    <string name="password">Kata Sandi</string>
    <string name="retype_password">Ulangi Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="forget">Lupa Password</string>
    <string name="item_search">Pencarian</string>
    <string name="item_rekom">Rekomendasi</string>
    <string name="item_timeline">Timeline</string>
    <string name="item_profile">Profile</string>
    <string name="item_bookmark">Bookmark</string>
    <string name="item_riwayat">Riwayat</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data_diri">Data Diri</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="ttl">Tempat, Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="bidang_kerja">Bidang Kerja</string>
    <string name="hambatan_disabilitas">Hambatan atau Disabilitas</string>
    <string name="unggah_cv">Unggah CV</string>
    <string name="lihat_cv">Lihat CV</string>
    <string name="edit_data_diri">Edit Data Diri</string>
    <string name="simpan">Simpan</string>
    <string name="keluar">Keluar</string>
    <string name="kirim_lamaran">Kirim Lamaran</string>
    <string name="tambah_bookmark">Tambah Bookmark</string>
    <string name="Detail_pekerjaan">Detail Pekerjaan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="delete">Delete</string>
    <string name="cari">Cari</string>
    <string name="berdasarkan">Pencarian Berdasarkan</string>
    <string name="photo">Photo</string>
    <string name="gallery">Gallery</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="pilih_cv">Pilih CV</string>
    <string name="judul_cv">Judul CV</string>
    <string name="nama_perusahaan">Nama Perusahaan</string>
    <string name="email_perusahaan">Email Perusahaan</string>
    <string name="alamat_perusahaan">Alamat Perusahaan</string>
    <string name="acara">Pelatihan</string>
    <string name="nama_pemateri">Pemateri</string>
    <string name="judul">Judul</string>
    <string name="lokasi">Lokasi</string>
    <string name="tanggal">Tanggal</string>
    <string name="contact">Contact</string>
    <string name="detail">Detail</string>
    <string name="hubungi">Hubungi</string>
    <string name="Detail_acara">Detail Acara</string>
</resources>
