<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/padding"
    android:background="@color/backgroudn"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:background="@color/white"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_width" />

            <EditText
                android:id="@+id/email_login"
                android:layout_marginTop="@dimen/top"
                android:background="@color/white"
                android:hint="@string/email"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height" />

            <EditText
                android:background="@color/white"
                android:layout_marginTop="@dimen/top"
                android:hint="@string/password"
                android:id="@+id/password_login"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height" />

            <Button
                android:id="@+id/login_btn"
                android:textColor="@color/white"
                android:text="@string/login"
                android:textAppearance="?android:textAppearanceMedium"
                android:background="@color/darkBlur"
                android:layout_marginTop="@dimen/top"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height" />

            <Button
                android:layout_marginBottom="@dimen/top"
                android:textColor="@color/white"
                android:background="@drawable/button_border"
                android:id="@+id/btn_to_singup"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/daftar"
                android:layout_marginTop="10dp"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>