<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="@dimen/top"
                android:id="@+id/edit_profile_pict"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/avatar"
                app:civ_border_width="0dp" />


            <TextView
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:text="@string/edit_data_diri"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/darkBlur" />

            <TextView
                android:layout_marginTop="@dimen/top"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/nama"
                android:textColor="@color/darkBlur"
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginTop="@dimen/to_title"
                android:id="@+id/edit_profile_nama"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height"
                android:text="@string/nama"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:textColor="@color/darkBlur"
                android:text="@string/email"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_marginTop="@dimen/top"
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content" />

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/edit_profile_email"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height"
                android:layout_marginTop="@dimen/to_title"
                android:text="@string/email"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:text="@string/jenis_kelamin"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/darkBlur" />

            <!--<EditText
                android:id="@+id/edit_profile_gender"
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_title"
                android:text="@string/jenis_kelamin"
                android:textAppearance="?android:textAppearanceMedium" />-->

            <Spinner
                android:layout_marginTop="@dimen/to_title"
                android:spinnerMode="dropdown"
                android:id="@+id/edit_profile_gender"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height"/>

            <TextView
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:text="@string/ttl"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/darkBlur" />

            <EditText
                android:id="@+id/edit_profile_ttl"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height"
                android:layout_marginTop="@dimen/to_title"
                android:text="@string/ttl"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:text="@string/alamat"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/darkBlur" />

            <EditText
                android:id="@+id/edit_profile_alamat"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height"
                android:layout_marginTop="@dimen/to_title"
                android:text="@string/alamat"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:text="@string/notelp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/darkBlur" />

            <EditText
                android:inputType="number"
                android:id="@+id/edit_profile_notelp"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height"
                android:layout_marginTop="@dimen/to_title"
                android:text="@string/notelp"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:text="@string/bidang_kerja"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/darkBlur" />

            <EditText
                android:id="@+id/edit_profile_bidang_kerja"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height"
                android:layout_marginTop="@dimen/to_title"
                android:text="@string/bidang_kerja"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top"
                android:text="@string/hambatan_disabilitas"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/darkBlur" />

            <!--<EditText
                android:id="@+id/profile_disabilitas"
                android:layout_width="@dimen/edit_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/to_title"
                android:text="@string/hambatan_disabilitas"
                android:textAppearance="?android:textAppearanceMedium" />-->

            <Spinner
                android:layout_marginTop="@dimen/to_title"
                android:spinnerMode="dropdown"
                android:id="@+id/edit_profile_disabilitas"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height"/>

            <ProgressBar
                android:layout_marginTop="@dimen/top"
                android:visibility="gone"
                android:id="@+id/pb_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginBottom="@dimen/top"
                android:textAppearance="?android:textAppearanceLarge"
                android:text="@string/simpan"
                android:textColor="@color/darkBlur"
                android:layout_marginTop="@dimen/top"
                android:background="@drawable/button_border_blue"
                android:id="@+id/btn_edit_profile"
                android:layout_width="@dimen/edit_width"
                android:layout_height="@dimen/edit_height" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>